Step7/deamonset.yml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: logging-daemonset
  labels:
    app: logging
spec:
  selector:
    matchLabels:
      app: logging
  template:
    metadata:
      labels:
        app: logging
    spec:
      containers:
      - name: logger
        image: busybox
        command:
          - sh
          - -c
          - |
            while true; do
              echo "Logging from node $(hostname) at $(date)" >> /var/log/node.log
              sleep 30
            done
        volumeMounts:
        - name: varlog
          mountPath: /var/log
      volumes:
      - name: varlog
        hostPath:
          path: /var/log
          type: Directory
