Step7/service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  selector:
    app: web
    environment: dev
  ports:
  - name: web
    protocol: TCP
    port: 80
    targetPort: 80
  type: LoadBalancer
